--- a/SomethingTM.ipynb
+++ b/SomethingTM.ipynb
@@ -2,13 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your name?  kat\n",
+      "How old are you?  18\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Age\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"What is your name? \")\n",
+    "age = input(\"How old are you? \")\n",
+    "try:\n",
+    "    if age > 21:\n",
+    "        print(name, \"can legally drink!\")\n",
+    "    else:\n",
+    "        print(name, \"cannot legally drink\")\n",
+    "except:\n",
+    "    print('Invalid Age')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = input(\"What is your name? \")\n",
-    "age = input(\"How old are you? \")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
