added an integer cast to fix error

--- a/SomethingTM.ipynb
+++ b/SomethingTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -17,13 +17,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid Age\n"
+      "kat cannot legally drink\n"
      ]
     }
    ],
    "source": [
     "name = input(\"What is your name? \")\n",
-    "age = input(\"How old are you? \")\n",
+    "age = int(input(\"How old are you? \"))\n",
     "try:\n",
     "    if age > 21:\n",
     "        print(name, \"can legally drink!\")\n",
